--- a/views/pages/Home/page/page.css
+++ b/views/pages/Home/page/page.css
@@ -78,6 +78,10 @@ body {
     cursor: pointer;
 }
 
+.report-component {
+    display: none;
+}
+
 .search-result {
     position: absolute;
     display: none;
