--- a/views/pages/author/reviewManga/viewAllManga/viewAllManga.ejs
+++ b/views/pages/author/reviewManga/viewAllManga/viewAllManga.ejs
@@ -1,4 +1,4 @@
-<div class="viewAllMangaAuthorPost">
+<div class="viewAllMangaAuthorPost" style="display: flex;">
   <div class="adminMenu">
     <%- include('../../../../components/authorMenu/authorMenu.ejs') %>
   </div>
