--- a/views/pages/category/viewAllCategory/viewAllCategory.ejs
+++ b/views/pages/category/viewAllCategory/viewAllCategory.ejs
@@ -1,4 +1,4 @@
-<div class="viewAllMangaAuthorPost">
+<div class="viewAllMangaAuthorPost" style="display: flex;">
     <div class="adminMenu">
         <%- include('../../../components/adminMenu/adminMenu.ejs') %>
     </div>
