--- a/views/pages/user/profileUser/profileUser.ejs
+++ b/views/pages/user/profileUser/profileUser.ejs
@@ -106,7 +106,7 @@
                         </form>
                     </div>
                     <div class="mainUserProfile__itemCenter">
-                        <img class="preview-avatar" src="<%= userProfile.avatar %>" alt="">
+                        <img class="preview-avatar" src="/<%= userProfile.avatar %>" alt="">
                     </div>
                     <div class="mainUserProfile__itemRight">
                         <button class="btnEdit editAvatar">Edit</button>
