--- a/views/components/headerHome/headerMobile.ejs
+++ b/views/components/headerHome/headerMobile.ejs
@@ -34,9 +34,9 @@
         <li class="category-click ">
             <span>category<i class="fa fa-caret-down"></i></span>
             <div class="submenu_mobile cat-submenu-mobile  hidden">
-                <% category.map((category)=>{%>
-                    <a onclick="findCategory('<%=category.id%>')">
-                        <%=category.name%>
+                <% category?.map((category)=>{%>
+                    <a onclick="findCategory('<%=category?.id%>')">
+                        <%=category?.name%>
                     </a>
                     <% })%>
             </div>
@@ -45,8 +45,8 @@
             <span>Top buyer rating<i class="fa fa-caret-down"></i></span>
             <div class="submenu_mobile chart-submenu-mobile  hidden">
                 <% user.map((user)=>{%>
-                    <a href=""><img src="<%=user._id.avatar%>" alt="">
-                        <%=user._id.username%>
+                    <a href=""><img src="<%=user?._id?.avatar%>" alt="">
+                        <%=user?._id?.username%>
                     </a>
                     <% })%>
             </div>
