--- a/views/components/headerHome/header.ejs
+++ b/views/components/headerHome/header.ejs
@@ -32,9 +32,9 @@
             <li class="category-hover">
                 <span>category<i class="fa fa-caret-down"></i></span>
                 <div class="submenu cat-submenu">
-                    <% category.map((category)=>{%>
-                        <a onclick="findCategory('<%=category.id%>')">
-                            <%=category.name%>
+                    <% category?.map((category)=>{%>
+                        <a onclick="findCategory('<%=category?.id%>')">
+                            <%=category?.name%>
                         </a>
                         <% })%>
                 </div>
@@ -42,11 +42,11 @@
             <li class="chart-hover">
                 <span>Top buyer rating<i class="fa fa-caret-down"></i></span>
                 <div class="submenu chart-submenu">
-                    <% user.map((user)=>{%>
-                        <a href=""><img src="<%=user._id.avatar%>" alt="">
-                            <%=user._id.username%>
-                        </a>
-                        <% })%>
+                        <% user.map((user)=>{%>
+                            <a href=""><img src="<%=user?._id?.avatar%>" alt="">
+                                <%=user?._id?.username%>
+                            </a>
+                            <% })%>
                 </div>
             </li>
             <li><a onclick="history()">history</a></li>
