--- a/views/pages/Home/follow/follow.ejs
+++ b/views/pages/Home/follow/follow.ejs
@@ -15,7 +15,7 @@
 <body>
     <!-- menu -->
     <header>
-        <% if(userDetail){%>
+        <% if(userDetail?){%>
             <%- include('../../../components/login_header/login_header') %>
                 <%}else{%>
                     <!-- menu -->
