--- a/views/pages/Home/history/history.ejs
+++ b/views/pages/Home/history/history.ejs
@@ -15,7 +15,7 @@
 <body>
     <!-- menu -->
     <header>
-        <% if(userDetail?){%>
+        <% if(userDetail.length){%>
             <%- include('../../../components/login_header/login_header') %>
                 <%}else{%>
                     <!-- menu -->
@@ -31,12 +31,12 @@
             <h2><i class="fa-solid fa-flag"></i> Truyện đang thoe dõi</h2>
             <div class="main-content">
                 <ul class="list-item">
-                    <%history?.map((h)=>{%>
+                    <%history.map((h)=>{%>
                         <li class="card-item">
                             <a>
                                 <img src="<%=h?.mangaID?.avatar%>" alt="" onclick="view('<%=h?.mangaID?.slug%>')">
                                 <div class="more-info">
-                                    <div class="unfollow" onclick="unhistory('<%=h._id%>')"><i
+                                    <div class="unfollow" onclick="unhistory('<%=h?._id%>')"><i
                                             class="fa-solid fa-circle-xmark"></i></div>
                                 </div>
                             </a>
