--- a/views/pages/Home/follow/follow.ejs
+++ b/views/pages/Home/follow/follow.ejs
@@ -15,7 +15,7 @@
 <body>
     <!-- menu -->
     <header>
-        <% if(userDetail.length){%>
+        <% if(userDetail){%>
             <%- include('../../../components/login_header/login_header') %>
                 <%}else{%>
                     <!-- menu -->
@@ -31,17 +31,18 @@
             <h2><i class="fa-solid fa-flag"></i> Truyện đang thoe dõi</h2>
             <div class="main-content">
                 <ul class="list-item">
-                    <%follows.map((f)=>{%>
+                    <%follows?.map((f)=>{%>
                         <li class="card-item">
                             <a>
-                                <img src="<%=f.mangaID?.avatar%>" alt="" onclick="viewDetails('<%=f.mangaID?.slug%>')">
+                                <img src="<%=f?.mangaID?.avatar%>" alt=""
+                                    onclick="viewDetails('<%=f?.mangaID?.slug%>')">
                                 <div class="more-info">
                                     <div class="unfollow" onclick="unfollow('<%=f._id%>')"><i
                                             class="fa-solid fa-circle-xmark"></i></div>
                                 </div>
                             </a>
                             <div class="bookname">
-                                <%=f.mangaID?.name%>
+                                <%=f?.mangaID?.name%>
                             </div>
                             <!-- <div class="lastest-chapter">Chapter 123</div> -->
                         </li>
