--- a/views/pages/Home/follow/follow.ejs
+++ b/views/pages/Home/follow/follow.ejs
@@ -31,13 +31,12 @@
             <h2><i class="fa-solid fa-flag"></i> Truyện đang thoe dõi</h2>
             <div class="main-content">
                 <ul class="list-item">
-                    <%follows?.map((f)=>{%>
+                    <%follows.map((f)=>{%>
                         <li class="card-item">
                             <a>
-                                <img src="<%=f?.mangaID?.avatar%>" alt=""
-                                    onclick="viewDetails('<%=f?.mangaID?.slug%>')">
+                                <img src="<%=f?.mangaID?.avatar%>" alt="" onclick="view('<%=f?.mangaID?.slug%>')">
                                 <div class="more-info">
-                                    <div class="unfollow" onclick="unfollow('<%=f._id%>')"><i
+                                    <div class="unfollow" onclick="unhistory('<%=f?._id%>')"><i
                                             class="fa-solid fa-circle-xmark"></i></div>
                                 </div>
                             </a>
