--- a/views/pages/Home/home/home.ejs
+++ b/views/pages/Home/home/home.ejs
@@ -110,6 +110,11 @@
                                     <div class="bookname">
                                         <%=m?.name%>
                                     </div>
+                                    <%if(chapter[index]?.mangaID===m.id){%>
+                                        <div class="lastest-chapter">
+                                            Chapter <%=chapter[index][chapter[index]?.length-1]?.chap%>
+                                        </div>
+                                        <%}%>
                                 </li>
                                 <%})%>
                         </ul>
@@ -154,7 +159,7 @@
 
                                             </div>
                                             <i class="fa-solid fa-thumbs-up like-total">
-                                                <%=m?.reaction?.length%>
+                                                <%=m.reaction?.length%>
                                             </i>
                                             <br>
                                             <%})%>
