--- a/views/pages/findByCategory/findByCategory.ejs
+++ b/views/pages/findByCategory/findByCategory.ejs
@@ -52,34 +52,8 @@
 
     <!-- footer -->
     <footer>
-        <div class="footer">
-            <div class="footer-left">
-                <a href="" class="logo">
-                    <img src="http://truyen48.com/template/frontend/images/logo.png" alt="">
-                </a>
-                <p class="quote">Luôn cập nhật liên tục các bộ truyện mới nhanh nhất để phục vụ độc giả.
-                    Đọc truyện hoàn toàn miễn phí, hỗ trợ đa thiết bị.
-                </p>
-                <p class="contact">Email: adstruyenqq@gmail.com</p>
-            </div>
-            <div class="footer-right">
-                <div class="footer-cat">
-                    <a href="http://">Chuyển sinh</a>
-                    <a href="http://">Manhwa</a>
-                    <a href="http://">Romance</a>
-                    <a href="http://">Cổ đại</a>
-                    <a href="http://">Chuyển sinh</a>
-                    <a href="http://">Manhwa</a>
-                    <a href="http://">Romance</a>
-                    <a href="http://">Cổ đại</a>
-                </div>
-                <p class="copyright">Mọi thông tin và hình ảnh trên website đều được sưu tầm trên Internet.
-                    Chúng tôi không sở hữu hay chịu trách nhiệm bất kỳ thông tin nào trên web này.
-                    Nếu làm ảnh hưởng đến cá nhân hay tổ chức nào, khi được yêu cầu,
-                    chúng tôi sẽ xem xét và gỡ bỏ ngay lập tức.
-                </p>
-            </div>
-        </div>
+        <%- include('../../components/footer') %>
+
     </footer>
     <!-- footer -->
 </body>
